cmake_minimum_required(VERSION 2.8)
project(chaos_driver_dafnepresenter)
find_package(chaos MODULE REQUIRED)
include_directories(../../../ ${chaos_INCLUDE_DIRS})
FILE(GLOB core_src core/*.cpp)
SET(DRIVERS_LIB )
MESSAGE(STATUS "Libraries ${DRIVERS_LIB}")
IF(BUILD_FORCE_STATIC)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${core_src})
ELSE()
ADD_LIBRARY(${PROJECT_NAME}  SHARED ${core_src})
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} chaos_cutoolkit chaos_common common_debug  common_misc_utility ${FrameworkLib})
FILE(GLOB files "core/*.h")
INSTALL(FILES ${files} DESTINATION include/driver/misc/models/DafnePresenter/core)
INSTALL(TARGETS ${PROJECT_NAME}
	DESTINATION "lib"
PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)
