cmake_minimum_required(VERSION 2.8)
project(chaos_driver_gibcontrol)
find_package(chaos MODULE REQUIRED)
include_directories(../../../ ${chaos_INCLUDE_DIRS})

#SET(CHAOS_CUS core/SCGibControlControlUnit.cpp)
#include($ENV{CHAOS_BUNDLE}/tools/project_template/CMakeChaos.txt)
#add_definitions(-DCHAOS -DDEBUG)
FILE(GLOB core_src core/*.cpp)
SET(DRIVERS_LIB )
MESSAGE(STATUS "Libraries ${DRIVERS_LIB}")
IF(BUILD_FORCE_STATIC)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${core_src})
#SET(CMAKE_EXE_LINKER_FLAGS "-static -Wl,--whole-archive -lchaos_common -Wl,--no-whole-archive")
ELSE()
ADD_LIBRARY(${PROJECT_NAME}  SHARED ${core_src})
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} chaos_cutoolkit chaos_common common_debug  chaos_cutoolkit ${FrameworkLib})

FILE(GLOB files "core/*.h")
INSTALL(FILES ${files} DESTINATION include/driver/misc/models/GibControl/core)
INSTALL_TARGETS(/lib ${PROJECT_NAME})
