cmake_minimum_required(VERSION 2.8)
project(chaos_driver_hetpic)
find_package(chaos MODULE REQUIRED)
include_directories(../../../ ${chaos_INCLUDE_DIRS})
FILE(GLOB core_src core/*.cpp)
SET(DRIVERS_LIB )
add_subdirectory(models)
MESSAGE(STATUS "Libraries ${DRIVERS_LIB}")
IF(BUILD_FORCE_STATIC)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${core_src})
ELSE()
ADD_LIBRARY(${PROJECT_NAME}  SHARED ${core_src})
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} chaos_cutoolkit chaos_common common_debug  chaos_cutoolkit ${FrameworkLib})
FILE(GLOB files "core/*.h")
INSTALL(FILES ${files} DESTINATION include/driver/misc/models/HETPic/core)
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
