cmake_minimum_required(VERSION 2.8)
project(chaos_driver_misc_vme)


IF (NOT CERN_ROOT_PREFIX)
  SET(CERN_ROOT_PREFIX ${CERN_ROOT})
ENDIF()

ADD_LIBRARY(${PROJECT_NAME} STATIC RTVme.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} chaos_common  chaos_cutoolkit common_vme)
#INSTALL_TARGETS(/lib ${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
installHeaders(.)

